--- a/css/styles.css
+++ b/css/styles.css
@@ -19,3 +19,20 @@
     text-decoration: none;
     color: #000;
 }
+
+body{
+    background-color: #FFFFFF;
+}
+
+/* Barra de nav*/ 
+header{
+    background-color: #00DE9B;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 85px;
+    width: 100%;
+    padding: 5px 10%;
+    margin-bottom: 20px;
+}
+
