--- a/css/styles.css
+++ b/css/styles.css
@@ -36,3 +36,14 @@ header{
     margin-bottom: 20px;
 }
 
+/* Logo de nav*/
+.header .logo img {
+    height: 70px;
+    width: auto;
+    transition: all 0.3s;
+}
+
+.header .logo img:hover{
+    transform: scale(1.2);
+}
+/* end Logo de nav*/
